mongodb/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openedx
  labels:
    app.kubernetes.io/name: openedx
