mongodb/08-service-secondary.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-secondary
  namespace: openedx
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
